Begin custom styles

--- a/JadeEditor/tmp.jade
+++ b/JadeEditor/tmp.jade
@@ -1924,8 +1924,8 @@
             "Transform": {
                 "Entity": 96,
                 "Position": {
-                    "X": 832.2869873046875,
-                    "Y": 836.8411865234375,
+                    "X": 816.6310424804688,
+                    "Y": 774.2169799804688,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -1934,8 +1934,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 4.527636528015137,
-                    "Y": 4.501453399658203,
+                    "X": 1.6810669898986816,
+                    "Y": 1.939563512802124,
                     "Z": 1.0
                 }
             }
@@ -4693,5 +4693,6 @@
             }
         }
     ],
+    "Project": "New Project.prj",
     "Size": 323
 }
