Add rough resource management system UNSTABLE BUILD

--- a/JadeEditor/tmp.jade
+++ b/JadeEditor/tmp.jade
@@ -1924,8 +1924,8 @@
             "Transform": {
                 "Entity": 96,
                 "Position": {
-                    "X": 838.5296630859375,
-                    "Y": 777.4148559570313,
+                    "X": 816.6310424804688,
+                    "Y": 774.2169799804688,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2004,8 +2004,8 @@
             "Transform": {
                 "Entity": 100,
                 "Position": {
-                    "X": 1038.637939453125,
-                    "Y": 590.87158203125,
+                    "X": 1034.080078125,
+                    "Y": 590.4405517578125,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2024,8 +2024,8 @@
             "Transform": {
                 "Entity": 101,
                 "Position": {
-                    "X": 0.0,
-                    "Y": 0.0,
+                    "X": -144.60760498046875,
+                    "Y": 67.16607666015625,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2046,6 +2046,126 @@
                 "Position": {
                     "X": 456.8704833984375,
                     "Y": -18.180999755859375,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 103,
+                "Position": {
+                    "X": 204.15187072753906,
+                    "Y": -34.193603515625,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 104,
+                "Position": {
+                    "X": -25.518997192382813,
+                    "Y": 167.3046417236328,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 105,
+                "Position": {
+                    "X": -189.569580078125,
+                    "Y": 164.8622283935547,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 106,
+                "Position": {
+                    "X": -291.03790283203125,
+                    "Y": 209.43603515625,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 107,
+                "Position": {
+                    "X": 3.645538330078125,
+                    "Y": 207.60423278808594,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 108,
+                "Position": {
+                    "X": 659.240478515625,
+                    "Y": 227.14344787597656,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2165,7 +2285,7 @@
                 "Entity": 96,
                 "FixedRotation": false,
                 "LinearDamping": 0.0,
-                "Mass": 875.0,
+                "Mass": 800.0,
                 "Velocity": {
                     "X": 0.0,
                     "Y": 0.0
@@ -3364,6 +3484,72 @@
                     "Z": 1.0
                 },
                 "Entity": 102
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 103
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 104
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 105
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 106
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 107
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 108
             }
         },
         {
@@ -4691,8 +4877,86 @@
                     "Y": 0.0
                 }
             }
+        },
+        {
+            "AABB": {
+                "Entity": 103,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 104,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 105,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 106,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 107,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 108,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
         }
     ],
     "Project": "New Project.prj",
-    "Size": 323
+    "Size": 341
 }
