Fix up a lot of path issues, and add project creation wizard

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -1,4 +1,20 @@
 {
+    "Assets": {
+        "AssetCount": 2,
+        "AssetList": {
+            "0": {
+                "Filepath": "C:\\dev\\C++\\JadeEngine\\JadeEditor\\assets\\images\\gizmos.png",
+                "ResourceId": 0,
+                "Type": 1
+            },
+            "1": {
+                "Filepath": "C:\\dev\\C++\\JadeEngine\\JadeEditor\\assets\\images\\decorationsAndBlocks.png",
+                "ResourceId": 1,
+                "Type": 1
+            }
+        },
+        "SceneID": 0
+    },
     "Components": [
         {
             "Transform": {
@@ -2004,8 +2020,8 @@
             "Transform": {
                 "Entity": 100,
                 "Position": {
-                    "X": 1034.080078125,
-                    "Y": 590.4405517578125,
+                    "X": 1038.637939453125,
+                    "Y": 590.87158203125,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2024,8 +2040,8 @@
             "Transform": {
                 "Entity": 101,
                 "Position": {
-                    "X": -144.60760498046875,
-                    "Y": 67.16607666015625,
+                    "X": 1328.1282958984375,
+                    "Y": -529.7685546875,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2034,8 +2050,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 2.81005859375,
+                    "Y": 2.515795946121216,
                     "Z": 1.0
                 }
             }
@@ -2044,8 +2060,8 @@
             "Transform": {
                 "Entity": 102,
                 "Position": {
-                    "X": 456.8704833984375,
-                    "Y": -18.180999755859375,
+                    "X": 64.69171142578125,
+                    "Y": -626.0127563476563,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2054,8 +2070,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 2.9608888626098633,
+                    "Y": 2.818957567214966,
                     "Z": 1.0
                 }
             }
@@ -2064,8 +2080,8 @@
             "Transform": {
                 "Entity": 103,
                 "Position": {
-                    "X": 204.15187072753906,
-                    "Y": -34.193603515625,
+                    "X": 322.793212890625,
+                    "Y": -269.8105163574219,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2074,8 +2090,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 3.1117310523986816,
+                    "Y": 2.8189330101013184,
                     "Z": 1.0
                 }
             }
@@ -2084,8 +2100,8 @@
             "Transform": {
                 "Entity": 104,
                 "Position": {
-                    "X": -25.518997192382813,
-                    "Y": 167.3046417236328,
+                    "X": 1188.603271484375,
+                    "Y": -513.8526611328125,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2094,8 +2110,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 4.921789646148682,
+                    "Y": 3.273681640625,
                     "Z": 1.0
                 }
             }
@@ -2104,8 +2120,8 @@
             "Transform": {
                 "Entity": 105,
                 "Position": {
-                    "X": -189.569580078125,
-                    "Y": 164.8622283935547,
+                    "X": 1360.55859375,
+                    "Y": -56.084320068359375,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2114,8 +2130,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 8.692730903625488,
+                    "Y": 5.24420166015625,
                     "Z": 1.0
                 }
             }
@@ -2124,8 +2140,8 @@
             "Transform": {
                 "Entity": 106,
                 "Position": {
-                    "X": -291.03790283203125,
-                    "Y": 209.43603515625,
+                    "X": 1443.51953125,
+                    "Y": -460.0422668457031,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2134,8 +2150,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 4.921789646148682,
+                    "Y": 6.608422756195068,
                     "Z": 1.0
                 }
             }
@@ -2144,8 +2160,8 @@
             "Transform": {
                 "Entity": 107,
                 "Position": {
-                    "X": 3.645538330078125,
-                    "Y": 207.60423278808594,
+                    "X": 1426.92724609375,
+                    "Y": -605.5579833984375,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -2154,8 +2170,8 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 1.0,
-                    "Y": 1.0,
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
                     "Z": 1.0
                 }
             }
@@ -2164,8 +2180,128 @@
             "Transform": {
                 "Entity": 108,
                 "Position": {
-                    "X": 659.240478515625,
-                    "Y": 227.14344787597656,
+                    "X": 1343.96630859375,
+                    "Y": -605.557861328125,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 109,
+                "Position": {
+                    "X": 1263.267822265625,
+                    "Y": -606.3157958984375,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 110,
+                "Position": {
+                    "X": 1182.5697021484375,
+                    "Y": -605.557861328125,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.659228563308716,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 111,
+                "Position": {
+                    "X": 141.03350830078125,
+                    "Y": -708.6317138671875,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 112,
+                "Position": {
+                    "X": 61.08935546875,
+                    "Y": -710.9053344726563,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 113,
+                "Position": {
+                    "X": -21.1173095703125,
+                    "Y": -710.9053344726563,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 2.6589999198913574,
+                    "Y": 2.6589999198913574,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 114,
+                "Position": {
+                    "X": 0.0,
+                    "Y": 0.0,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -3550,6 +3686,72 @@
                     "Z": 1.0
                 },
                 "Entity": 108
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 109
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 110
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 111
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 112
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 113
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 114
             }
         },
         {
@@ -4955,8 +5157,86 @@
                     "Y": 0.0
                 }
             }
+        },
+        {
+            "AABB": {
+                "Entity": 109,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 110,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 111,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 112,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 113,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
+        },
+        {
+            "AABB": {
+                "Entity": 114,
+                "HalfSize": {
+                    "X": 16.0,
+                    "Y": 16.0
+                },
+                "Offset": {
+                    "X": 0.0,
+                    "Y": 0.0
+                }
+            }
         }
     ],
-    "Project": "New Project.prj",
-    "Size": 341
+    "Project": "C:\\Users\\Gabe\\Documents\\JadeProjects\\TestProject1\\TestProject1.jprj",
+    "Size": 359
 }
