--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -1,9 +1,50 @@
 {
     "Assets": {
-        "AssetCount": 0,
+        "AssetCount": 1,
+        "AssetList": {
+            "1": {
+                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\adventure_girl\\png\\Dead (1).png",
+                "ResourceId": 1,
+                "Type": 1
+            }
+        },
         "SceneID": 0
     },
-    "Components": null,
-    "Project": "C:\\PixelRifts\\Jade Projects\\Gamurs.jprj",
-    "Size": 0
+    "Components": [
+        {
+            "Transform": {
+                "Entity": 1,
+                "Position": {
+                    "X": -294.2562561035156,
+                    "Y": 67.50000762939453,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 14.36081600189209,
+                    "Y": 14.821435928344727,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "SpriteRenderer": {
+                "AssetId": 1,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 0.9999899864196777,
+                    "Z": 0.9999899864196777
+                },
+                "Entity": 1,
+                "ZIndex": 0
+            }
+        }
+    ],
+    "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
+    "Size": 2
 }
