Create ability to add custom native scripts at runtime

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -1,22 +1,15 @@
 {
     "Assets": {
-        "AssetCount": 1,
-        "AssetList": {
-            "1": {
-                "Filepath": "C:\\Users\\Gabe\\Documents\\Graphics\\GameAssets\\Free stuff\\adventure_girl\\png\\Dead (1).png",
-                "ResourceId": 1,
-                "Type": 1
-            }
-        },
+        "AssetCount": 0,
         "SceneID": 0
     },
     "Components": [
         {
             "Transform": {
-                "Entity": 1,
+                "Entity": 2097152,
                 "Position": {
-                    "X": -294.2562561035156,
-                    "Y": 67.50000762939453,
+                    "X": 0.0,
+                    "Y": 0.0,
                     "Z": 0.0
                 },
                 "Rotation": {
@@ -25,22 +18,22 @@
                     "Z": 0.0
                 },
                 "Scale": {
-                    "X": 14.36081600189209,
-                    "Y": 14.821435928344727,
+                    "X": 1.0,
+                    "Y": 1.0,
                     "Z": 1.0
                 }
             }
         },
         {
             "SpriteRenderer": {
-                "AssetId": 1,
+                "AssetId": 4294967295,
                 "Color": {
                     "W": 1.0,
                     "X": 1.0,
-                    "Y": 0.9999899864196777,
-                    "Z": 0.9999899864196777
+                    "Y": 1.0,
+                    "Z": 1.0
                 },
-                "Entity": 1,
+                "Entity": 2097152,
                 "ZIndex": 0
             }
         }
