MVP hot reload native scripting DONE

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -6,7 +6,7 @@
     "Components": [
         {
             "Transform": {
-                "Entity": 2097152,
+                "Entity": 0,
                 "Position": {
                     "X": 0.0,
                     "Y": 0.0,
@@ -33,11 +33,25 @@
                     "Y": 1.0,
                     "Z": 1.0
                 },
-                "Entity": 2097152,
+                "Entity": 0,
                 "ZIndex": 0
+            }
+        },
+        {
+            "MyClass": {
+                "Entity": 0,
+                "anotherAnother": 20.0,
+                "anotherFloat": 10.0,
+                "someFloat": 0.0,
+                "someSortOfInt": 10
+            }
+        },
+        {
+            "FlowerScript": {
+                "Entity": 0
             }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
-    "Size": 2
+    "Size": 4
 }
