Change scripting dll to import imgui as dll

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -8,6 +8,26 @@
             "Transform": {
                 "Entity": 0,
                 "Position": {
+                    "X": 522.841064453125,
+                    "Y": 158.49485778808594,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 1,
+                "Position": {
                     "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
@@ -38,6 +58,33 @@
             }
         },
         {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 1,
+                "ZIndex": 0
+            }
+        },
+        {
+            "KillScript": {
+                "Entity": 1,
+                "mikeIsDead": 0,
+                "personIWantToKill": 10.0,
+                "piIsGreat": 3.140000104904175
+            }
+        },
+        {
+            "MyOtherClass": {
+                "Entity": 0,
+                "myOtherClassFloat": 3.140000104904175
+            }
+        },
+        {
             "MyClass": {
                 "Entity": 0,
                 "anotherAnother": 20.0,
@@ -48,10 +95,11 @@
         },
         {
             "FlowerScript": {
-                "Entity": 0
+                "Entity": 0,
+                "flowerFloats": 20.0
             }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
-    "Size": 4
+    "Size": 8
 }
