Add pretty imgui functions to native scripts

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -28,6 +28,26 @@
             "Transform": {
                 "Entity": 1,
                 "Position": {
+                    "X": 455.03778076171875,
+                    "Y": 16.425870895385742,
+                    "Z": 0.0
+                },
+                "Rotation": {
+                    "X": 0.0,
+                    "Y": 0.0,
+                    "Z": 0.0
+                },
+                "Scale": {
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                }
+            }
+        },
+        {
+            "Transform": {
+                "Entity": 2,
+                "Position": {
                     "X": 0.0,
                     "Y": 0.0,
                     "Z": 0.0
@@ -71,8 +91,31 @@
             }
         },
         {
+            "SpriteRenderer": {
+                "AssetId": 4294967295,
+                "Color": {
+                    "W": 1.0,
+                    "X": 1.0,
+                    "Y": 1.0,
+                    "Z": 1.0
+                },
+                "Entity": 2,
+                "ZIndex": 0
+            }
+        },
+        {
             "KillScript": {
                 "Entity": 1,
+                "eIsGreat": 2,
+                "mikeIsDead": 0,
+                "personIWantToKill": 10.0,
+                "piIsGreat": 3.140000104904175
+            }
+        },
+        {
+            "KillScript": {
+                "Entity": 0,
+                "eIsGreat": 2,
                 "mikeIsDead": 0,
                 "personIWantToKill": 10.0,
                 "piIsGreat": 3.140000104904175
@@ -96,10 +139,16 @@
         {
             "FlowerScript": {
                 "Entity": 0,
-                "flowerFloats": 20.0
+                "flowerFloats": 20.0,
+                "flowerIntsPower": 10
+            }
+        },
+        {
+            "Ship": {
+                "Entity": 2
             }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
-    "Size": 8
+    "Size": 12
 }
