Fix some parsing bugs

--- a/JadeEditor/assets/tmp.jade
+++ b/JadeEditor/assets/tmp.jade
@@ -106,19 +106,15 @@
         {
             "KillScript": {
                 "Entity": 1,
-                "eIsGreat": 2,
                 "mikeIsDead": 0,
-                "personIWantToKill": 10.0,
-                "piIsGreat": 3.140000104904175
+                "personIWantToKill": 10.0
             }
         },
         {
             "KillScript": {
                 "Entity": 0,
-                "eIsGreat": 2,
                 "mikeIsDead": 0,
-                "personIWantToKill": 10.0,
-                "piIsGreat": 3.140000104904175
+                "personIWantToKill": 10.0
             }
         },
         {
@@ -142,13 +138,8 @@
                 "flowerFloats": 20.0,
                 "flowerIntsPower": 10
             }
-        },
-        {
-            "Ship": {
-                "Entity": 2
-            }
         }
     ],
     "Project": "C:\\Users\\Gabe\\Documents\\Coding\\JadeProjects\\TestProject\\.jprj",
-    "Size": 12
+    "Size": 11
 }
